Add CLI color output (#24) and PMD static analysis
- Add CliOutput utility using Picocli's Ansi for colored terminal output
- Add --no-color global flag to disable colors
- Update all 17 command files with colored success/error/warn/header output
- Add PMD 3.26.0 plugin with custom ruleset, enforce at validate phase
- Fix all PMD violations across 5 modules (FQN imports, Locale, char appends,
  unused code, @Override annotations, diamond operator, etc.)
- Add CryptoFunctions and NetworkFunctions tests for JaCoCo coverage
- Add .claude/scripts/fix_fqn.py reusable script for FQN-to-import fixes
- Update CLAUDE.md with imports coding standard and PMD section

Co-authored-by: Claude Opus 4.6 <noreply@anthropic.com>